# TextGuard

./: .gitignore  README.md  consistency_check.py  feedback.py  grammar_check.py  main.py  pyproject.toml  run.py  web.py
dataset/: test.docx  test_long.docx  val_long.docx  ~$st_long.docx
filereader/: reader.py
frontend/static/: chat.js  index.html
llm/: __init__.py  entity.py  memory.py  model.py  prompt.py
logs/: all_entities.json  consistency_result.json  corrected_result.txt
logs/test/: corrected_result.txt  grammar_check_results.json
logs/test_long/: all_entities.json  consistency_result.json  corrected_result.txt
raw/docs/: README_EN.md
test/: test_chunk.py  test_model.py  test_reader.py
